@@ -4,6 +4,7 @@ KNOWN BUGS:
 Changes since 20070108a:
 - Bugfix: do not refuse to run in dryrun mode. Reported by Clemens
   Fischer.
+- Change: Improve some applyfilter error messages.
 
 20070108a: Changes since 20070101a:
 - Bugfix: do not crash when using inverted newsgroup[s] = !... matches
